--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">SMS Forwarding</string>
     <string name="hint_msg">SMS Forwarding to...</string>
-    <string name="btn_msg">Set Phone Number</string>
-    <string name="chk_notification">Show popup notification</string>
+    <string name="btn_msg">Save Settings</string>
     <string name="chk_run">Forward my SMS</string>
 </resources>
